# synapse

./: .gitignore  BrowsePage.patch.tsx  CHANGELOG.md  CHANGELOG_video_preview.md  CHANGELOG_video_stability.md  CLAUDE.md  CONTRIBUTING.md  INSTALLATION.md  PATCH_BROWSE_PAGE.md  PLAN-packs-video-import-TRACKED.md  README.md  REVIEW-COMPLETE.md  __main__.py  cli.py  debug_civarchive_real.py  debug_civitai_response.py  debug_env.py  debug_media_preview_logic.py  debug_search_tifa.py  demo-logo-cli.sh  find_video.py  logo-header-variants.html  logo-proposals.html  logo-tight-spacing.html  logo-variant-2-badge-options.html  logo-variant-6-refined.html  logo-variant-7-sizes.html  logo_variants.html  pack.json  pyproject.toml  pytest.ini  requirements.txt  run_synapse_tests.py  sidebar-final-variants.html  sidebar-variants.html  verify_import.py
.claude/: settings.json
civarchive-fix/: README.md  browsepage_transform_fix.tsx  civarchive_section_fix.py
config/: __init__.py  avatar.yaml.example  settings.py
docs/: CIVITAI-CDN-VIDEO.md
plans/: PLAN-AI-Services.md  PLAN-Avatar-Engine-Bugfixes.md  PLAN-Avatar-Engine-Integration.md  PLAN-Avatar-TaskService.md  PLAN-Avatar-v1.2-Dynamic-Models.md  PLAN-Blob-Manifest.md  PLAN-Browse-Filters.md  PLAN-Bulk-Updates.md  PLAN-CDN-Smoke-Tests.md  PLAN-CDN-Video-Fix.md  PLAN-Custom-Pack-R1.md  PLAN-Dependencies.md  PLAN-Fullscreen-MetaPanel.md  PLAN-Install-Packs.md  PLAN-Internal-Search-trpc.md  PLAN-Model-Inventory.md  PLAN-NSFW.md  PLAN-Pack-Edit.md  PLAN-Phase-4.md  PLAN-Phase-6-Store-UI.md  PLAN-Release-1-Roadmap.md  PLAN-Resolution.md  PLAN-Resolve-Model.md  PLAN-Updates.md  PLAN-Workflow-Wizard.md  PLAN-i18n.md  SPEC-Local-Resolve.md  ai_extraction_spec.md  audit-resolve-model-redesign-local.md  ui-loading-animations.html  ui-mockups-phase5-final.html  ui-mockups-phase5.html
scripts/: analyze_civitai_images.py  avatar-upgrade.sh  civitai_fetch_images_meta.py  debug_api.py  diagnose-web.sh  install.sh  start-all.sh  verify.sh  verify_search.py
src/: __init__.py
src/ai/: cache.py  (+4 more)
synapse-fix/: CHANGES.md
tests/: conftest.py  e2e_resolve_claude.py  e2e_resolve_real.py  (+3 more)
(+514 files in other folders)
