[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-store"
version = "2.7.0"
description = "ComfyUI Asset Manager - Content-addressable storage with multi-UI support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Synapse Team" }
]
keywords = [
    "comfyui",
    "stable-diffusion",
    "asset-manager",
    "civitai",
    "huggingface",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "filelock>=3.0",
    "requests>=2.28",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = [
    "synapse-store[api,dev]",
]

[project.scripts]
synapse = "src.store.cli:main"

[project.urls]
Homepage = "https://github.com/synapse/synapse-store"
Documentation = "https://synapse.dev/docs/store"
Repository = "https://github.com/synapse/synapse-store"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
